[package]
name = "colorpnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.3", features = ["v4","fast-rng","macro-diagnostics","js","serde"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"